# python-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MIGRATING_TO_1.0.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
examples/: async_batch_fetch.py  async_browser_use_task.py  async_claude_computer_use_task.py  async_computer_action.py  async_crawl.py  async_cua_task.py  async_extension_create.py  async_extension_list.py  async_extract.py  async_gemini_computer_use_task.py  async_hyper_agent_task.py  async_profile_list.py  async_scrape.py  async_session_list.py  async_team_credit_info.py  async_web_crawl.py  async_web_fetch.py  async_web_search.py  sync_batch_fetch.py  sync_browser_use_task.py  sync_claude_computer_use_task.py  sync_computer_action.py  sync_crawl.py  sync_cua_task.py  sync_extension_create.py  sync_extension_list.py  sync_extract.py  sync_gemini_computer_use_task.py  sync_hyper_agent_task.py  sync_profile_list.py  sync_scrape.py  sync_session_list.py  sync_team_credit_info.py  sync_web_crawl.py  sync_web_fetch.py  sync_web_search.py
hyperbrowser/: __init__.py  config.py  control_auth.py  display_utils.py  exceptions.py  header_utils.py  mapping_utils.py  sandbox_common.py  type_utils.py  version.py
tests/: .env.example  ast_function_source_utils.py  ast_import_utils.py  guardrail_ast_utils.py  test_agent_examples_coverage.py  test_agent_helper_boundary.py  test_agent_manager_serialization.py  test_agent_operation_metadata.py  test_agent_operation_metadata_usage.py  test_agent_payload_helper_usage.py  test_agent_payload_utils.py  test_agent_request_internal_reuse.py  test_agent_request_wrapper_internal_reuse.py  test_agent_route_builder_usage.py  test_agent_route_constants.py  test_agent_start_helper_usage.py  test_agent_start_utils.py  test_agent_status_utils.py  test_agent_stop_helper_usage.py  test_agent_stop_utils.py  test_agent_task_read_helper_usage.py  test_agent_task_read_utils.py  test_agent_terminal_status_helper_usage.py  test_architecture_marker_usage.py  (+259 more)
(+193 files in other folders)
