[tool.poetry]
name = "hyperbrowser"
version = "1.0.0"
description = "Python SDK for hyperbrowser"
authors = ["Nikhil Shahi <nshahi1998@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
    { path = "MIGRATING_TO_1.0.md", format = ["sdist"] },
    { path = "hyperbrowser/py.typed", format = ["sdist", "wheel"] },
]
homepage = "https://github.com/hyperbrowserai/python-sdk"
repository = "https://github.com/hyperbrowserai/python-sdk"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0,<3"
httpx = ">=0.23.0,<1"
jsonref = ">=1.1.0"
websockets = ">=13,<16"
typing-extensions = ">=4.0,<5"


[tool.poetry.group.dev.dependencies]
mypy = "1.14.1"
pyright = "1.1.411"
ruff = "^0.3.0"
pytest = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
